# magpie

./: CHANGELOG  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  ci.yml  kani.yaml  release.yaml  release.yml
benches/: README.md  othello_board.rs
examples/: README.md  basic_operations.rs  board_operations.rs  serde.rs
examples/human_vs_ai/: coord.rs  main.rs  util.rs
examples/human_vs_ai/agent/: human.rs  human_agent.rs  mod.rs  random.rs  random_agent.rs
src/: direction.rs  lib.rs  othello_board.rs  stone.rs
src/othello/: bitboard.rs  bitboard_position_impl.rs  board.rs  constants.rs  display.rs  game.rs  mod.rs  ops.rs  othello_board.rs  position.rs  stone.rs
src/othello/ops/: bitboard_impls.rs  cross_type_impls.rs  position_impls.rs
tests/: bitboard.rs  bitboard_bitwise.rs  bitboard_cmp.rs  bitboard_shifts.rs  display.rs  game.rs  kani.rs  othello_board.rs  perft.rs  position.rs  position_bitwise.rs  position_cmp.rs  position_shifts.rs  quickcheck.rs  serde.rs  square_extraction.rs  stone.rs
tests/common/: mod.rs
tests/kani_common/: mod.rs
