[package]
name = "magpie"
version = "0.9.1"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2021"
description = "Reasonably efficient Othello library built with bitboards"
repository = "https://github.com/LimeEng/magpie/"
license = "MIT"
keywords = ["othello", "reversi", "bitboard"]
categories = ["algorithms", "game-engines"]
build = "build/build.rs"

exclude = [
    ".github/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
serde_json = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
indoc = "1.0"
paste = "1.0"

[[example]]
name = "serde"
required-features = ["serde"]

[[test]]
name = "serde"
required-features = ["serde"]

[[bench]]
name = "othello_board"
harness = false

[profile.test]
opt-level = 3
