[package]
name = "magpie"
version = "0.11.2"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2024"
description = "High-performance Othello library built with bitboards"
repository = "https://github.com/LimeEng/magpie/"
license = "MIT"
keywords = ["othello", "reversi", "bitboard"]
categories = ["algorithms", "game-engines"]
build = "build/build.rs"

exclude = [
    ".github/**"
]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
indoc = "2.0"
paste = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.9"
serde_json = "1.0"

[[example]]
name = "serde"
required-features = ["serde"]

[[test]]
name = "serde"
required-features = ["serde"]

[[bench]]
name = "othello_board"
harness = false

[profile.test]
opt-level = 3
